# grave_matters

./: Cargo.toml  LICENSE_ASSETS.md  LICENSE_CODE.md  Trunk.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: ja33xirni0z2bqmsi288vca9mz4dd57q-source
.github/workflows/: release.yaml
assets/models/player/: playerproto.vox
assets/models/tiles/: basic.vox
docs/: game-design.md  organization.md
src/: app.rs  audio.rs  lib.rs  main.rs  prelude.rs
src/demo/: movement.rs  player.rs
src/global/: mod.rs
src/global/actions/: mod.rs
src/global/layers/: mod.rs
src/global/sets/: mod.rs
src/global/states/: app_state.rs  mod.rs
src/plugins/: mod.rs
src/plugins/asset_loading/: mod.rs
src/plugins/atmosphere/: mod.rs
src/plugins/camera/: components.rs  mod.rs  systems.rs
src/plugins/dev/: mod.rs
src/plugins/dev/editor/: mod.rs
src/plugins/input/: mod.rs
src/plugins/splash_screen/: components.rs  mod.rs  resources.rs  systems.rs
src/plugins/voxel/: mod.rs
src/screens/: credits.rs  gameplay.rs  mod.rs  title.rs
src/theme/: interaction.rs
src/utils/: mod.rs  ui.rs
web/: index.html
