[package]
name = "grave_matters"
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["wayland"] }
tiny_bail = "0.4.2"
winit = "0.30.5"
rand = "0.8"
# Compile low-severity logs out of native builds for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_asset_loader = { version = "0.21", features = ["2d", "3d"] }
leafwing-input-manager = "0.15.1"
bevy_vox_scene = "0.15.0"
bevy_atmosphere = "0.10.0"
bevy_editor_pls = "0.10.0"
bevy_dolly = "0.0.4"
inventory = "0.3.15"
color-eyre = "0.6.3"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    "bevy/bevy_dev_tools",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
opt-level = "s"
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"
